# naive_bayes

./: GibbsOptBucket.hs  Makefile  NBHakaru.hs  Setup.hs  gibbs.c  gibbsBucket.c  naive-bayes.cabal  nb_simp.c  nb_simp.hk
src/: NBHakaru.hs
